# songbook-generator

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  database_source.cpp  database_source.hpp  main.cpp  model.cpp  model.hpp  song.hpp  song_reference.hpp  song_widget.cpp  song_widget.hpp  source.cpp  source.hpp  sources_list_widget.cpp  sources_list_widget.hpp  window.cpp  window.hpp
